Removed italic on <a> elements and made tabs non-italic

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -8,10 +8,10 @@
 <div class='navbar-dashboard shadow'>
     <nav class='nav-fill w-100'>
         <div class='nav main-nav' id='nav-tab' role='tablist'>
-            <a class='nav-item dashboard-menu-item nav-link font-italic font-bold' id='nav-league-tab' data-toggle='tab' href='#nav-league' role='tab' aria-controls='nav-league' aria-selected='false'>League</a>
-            <a class='nav-item dashboard-menu-item nav-link font-italic' id='nav-games-tab' data-toggle='tab' href='#nav-games' role='tab' aria-controls='nav-games' aria-selected='false'>Games</a>
-            <a class='nav-item dashboard-menu-item nav-link font-italic' id='nav-picks-tab' data-toggle='tab' href='#nav-picks' role='tab' aria-controls='nav-picks' aria-selected='false'>Picks</a>
-            <a class='nav-item dashboard-menu-item nav-link font-italic' id='nav-bets-tab' data-toggle='tab' href='#nav-bets' role='tab' aria-controls='nav-bets' aria-selected='false'>Bets</a>
+            <a class='nav-item dashboard-menu-item nav-link' id='nav-league-tab' data-toggle='tab' href='#nav-league' role='tab' aria-controls='nav-league' aria-selected='false'>League</a>
+            <a class='nav-item dashboard-menu-item nav-link' id='nav-games-tab' data-toggle='tab' href='#nav-games' role='tab' aria-controls='nav-games' aria-selected='false'>Games</a>
+            <a class='nav-item dashboard-menu-item nav-link' id='nav-picks-tab' data-toggle='tab' href='#nav-picks' role='tab' aria-controls='nav-picks' aria-selected='false'>Picks</a>
+            <a class='nav-item dashboard-menu-item nav-link' id='nav-bets-tab' data-toggle='tab' href='#nav-bets' role='tab' aria-controls='nav-bets' aria-selected='false'>Bets</a>
         </div>
     </nav>
 </div>
