Added link to compare teams page

--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -9,7 +9,8 @@
         <h4>Away</h4>
     </div>
 </div>
-{% for currentGame in gameData %} {% if currentGame.game.pickLocked == False %} {% if currentGame.gameChoice.pickWinner != None %}
+{% for currentGame in gameData %}
+{% if currentGame.game.pickLocked == False %} {% if currentGame.gameChoice.pickWinner != None %}
 <!-- Picks have been made -->
 <div class="d-flex flex-row justify-content-center">
     {% if currentGame.gameChoice.pickWinner == currentGame.game.homeTeam %}
@@ -28,6 +29,7 @@
     <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center mb-3">
         <small>{{ currentGame.date }}</small>
         <small>{{ currentGame.time }}</small>
+        <a href='/picks/compare/{{ currentGame.game.homeTeam.name }}vs{{ currentGame.game.awayTeam.name }}/'>Compare</a>
     </div>
     {% if currentGame.gameChoice.pickWinner == currentGame.game.awayTeam %}
     <div class="col-lg-3 pick-box pick-box-selected text-center">
@@ -54,6 +56,7 @@
     <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center mb-3">
         <div><small>{{ currentGame.date }}</small></div>
         <div><small>{{ currentGame.time }}</small></div>
+        <a href='/picks/compare/{{ currentGame.game.homeTeam.name }}vs{{ currentGame.game.awayTeam.name }}/'>Compare</a>
     </div>
     <div class="col-lg-3 pick-box text-center">
         <input type="radio" name="{{ currentGame.game.id }}" id="{{ currentGame.game.awayTeam.name }}-pick" value="{{ currentGame.game.awayTeam.name }}">
@@ -81,6 +84,7 @@
         <img class="img-fluid" src="{% static 'media/lock.png' %}" width="30" height="auto">
         <div><small>{{ currentGame.date }}</small></div>
         <div><small>{{ currentGame.time }}</small></div>
+        <a href='/picks/compare/{{ currentGame.game.homeTeam.name }}vs{{ currentGame.game.awayTeam.name }}/'>Compare</a>
     </div>
     {% if currentGame.gameChoice.pickWinner == currentGame.game.awayTeam %}
     <div class="col-lg-3 pick-box pick-box-selected locked text-center">
