Added margin to home button

--- a/picks/templates/picks/teamCompare.html
+++ b/picks/templates/picks/teamCompare.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class='col-lg-2 text-center'>
-        <a class="btn btn-blue mb-2" href='/'>&#8249; Home</a></div>
+        <a class="btn btn-blue m-2" href='/'>&#8249; Home</a></div>
         <div class='col-lg-5 col-sm-12 text-center shadow p-2'>
             <h1>{{ awayTeamData.awayTeamName }}</h1>
             <img class='team-logo' src='/static/media/{{ awayTeamData.awayTeamName }}.png'>
