--- a/picks/templates/picks/teamCompare.html
+++ b/picks/templates/picks/teamCompare.html
@@ -13,12 +13,12 @@
                 <div class='m-2 border-top'></div>
                 <div class='d-flex justify-content-between'>
                     <p class='font-italic'>Spread Covered</p> 
-                    <p>{{ homeTeamData.homeCoveredSpread }}</p>
+                    <p class='{% if homeTeamData.homeCoveredSpread > awayTeamData.awayCoveredSpread %}text-success{% else %}text-danger{% endif %}'>{{ homeTeamData.homeCoveredSpread }}</p>
                 </div>
                 <div class='m-2 border-top'></div>
                 <div class='d-flex justify-content-between'>
                     <p class='font-italic'>Spread Covered %</p> 
-                    <p>{{ homeTeamData.homeCoveredSpreadPercentage }}</p>
+                    <p class='{% if homeTeamData.homeCoveredSpread > awayTeamData.awayCoveredSpread %}text-success{% else %}text-danger{% endif %}'>{{ homeTeamData.homeCoveredSpreadPercentage }}</p>
                 </div>
                 <div class='m-2 border-top'></div>
             </div>
@@ -36,12 +36,12 @@
                 <div class='m-2 border-top'></div>
                 <div class='d-flex justify-content-between'>
                     <p class='font-italic'>Spread Covered</p> 
-                    <p>{{ awayTeamData.awayCoveredSpread }}</p>
+                    <p class='{% if awayTeamData.awayCoveredSpread > homeTeamData.homeCoveredSpread %}text-success{% else %}text-danger{% endif %}'>{{ awayTeamData.awayCoveredSpread }}</p>
                 </div>
                 <div class='m-2 border-top'></div>
                 <div class='d-flex justify-content-between'>
                     <p class='font-italic'>Spread Covered %</p> 
-                    <p>{{ awayTeamData.awayCoveredSpreadPercentage }}</p>
+                    <p class='{% if awayTeamData.awayCoveredSpread > homeTeamData.homeCoveredSpread %}text-success{% else %}text-danger{% endif %}'>{{ awayTeamData.awayCoveredSpreadPercentage }}</p>
                 </div>
                 <div class='m-2 border-top'></div>
             </div>
