--- a/picks/templates/picks/picks.html
+++ b/picks/templates/picks/picks.html
@@ -1,11 +1,11 @@
 {% load static %} {% if gameData %}
 <div class="d-flex flex-row justify-content-center">
-    <div class="col-lg-3 text-center">
+    <div class="col-lg-3 text-center max-width-box">
         <h4>Home</h4>
     </div>
     <div class="col-lg-2 d-flex flex-column align-items-center justify-content-center mb-3">
     </div>
-    <div class="col-lg-3 text-center">
+    <div class="col-lg-3 text-center max-width-box">
         <h4>Away</h4>
     </div>
 </div>
