--- a/picks/static/picks/css/picks.css
+++ b/picks/static/picks/css/picks.css
@@ -1,11 +1,12 @@
 /* Pick Box Styles */
 
 .pick-box {
-    margin-bottom: 25px;
+    margin-bottom: 30px;
     cursor: pointer;
     border-radius: 5px;
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: 2px solid #ffffff;
+    max-width: 200px;
 }
 
 .pick-box-unselected {
