--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -198,7 +198,7 @@
     {% if currentGame.gameChoice.betWinner == currentGame.game.homeTeam %}
     <div class="col-lg-3 bet-box-locked bet-box-selected text-center d-flex flex-column justify-content-center">
         {% else %}
-        <div class="col-lg-3 bet-box-locked text-center d-flex flex-column justify-content-center">
+        <div class="col-lg-3 bet-box-locked text-center d-flex flex-column justify-content-center max-width-box">
             {% endif %} {% if currentGame.game.homeSpread > 0 %}
             <div>
                 <h6>+{{ currentGame.game.homeSpread|floatformat }}</h6>
@@ -222,9 +222,9 @@
             <h6 class='blue'>{{ currentGame.gameChoice.betAmount }}</h6>
         </div>
         {% if currentGame.gameChoice.betWinner == currentGame.game.awayTeam %}
-        <div class="col-lg-3 bet-box-locked bet-box-selected text-center d-flex flex-column justify-content-center">
+        <div class="col-lg-3 bet-box-locked bet-box-selected text-center d-flex flex-column justify-content-center max-width-box">
             {% else %}
-            <div class="col-lg-3 bet-box-locked text-center d-flex flex-column justify-content-center">
+            <div class="col-lg-3 bet-box-locked text-center d-flex flex-column justify-content-center max-width-box">
                 {% endif %} {% if currentGame.game.awaySpread > 0 %}
                 <div>
                     <h6>+{{ currentGame.game.awaySpread|floatformat }}</h6>
