--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -243,17 +243,8 @@
                     {% if currentGame.gameChoice.pickWinner %} 
                         {% if currentGame.game.isComplete %}
                         <!--Game is complete, display score-->
-                            {% if currentGame.gameChoice.correctPickFlag == True %}
-                                <img class='team-logo' src='/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png'> 
-                                {% if week == 1 or week == '1' %}
-                                <h6 class='text-success'><strong>+50</strong></h6>
-                                {% else %}
-                                <h6 class='text-success'><strong>+25</strong></h6>
-                                {% endif %} 
-                            {% else %}
-                                <img class='team-logo' src='/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png'>
-                                <h6 class='text-danger'><strong>+0</strong></h6>
-                            {% endif %}
+                            <img class='team-logo' src='/static/media/{{ currentGame.gameChoice.pickWinner.name }}.png'> 
+                            <h6 class='{% if currentGame.gameChoice.correctPickFlag == True %}text-success{% else %}text-danger{% endif %}'><strong>{{ currentGame.gameChoice.pickAmountWon }}</strong></h6>
                         {% else %}
                             {% if currentGame.game.pickLocked %}
                             <!--Display in progress game stats -->
