Updated Add Week admin logic to have new weeks types including Wild Card, Divisional Playoffs, etc.

--- a/command/templates/command/seasonSettings.html
+++ b/command/templates/command/seasonSettings.html
@@ -16,10 +16,10 @@
                 <select id="weekType" class="form-control">
                 <option value="Preseason">Preseason</option>
                 <option value="Regular Season">Regular Season</option>
-                <option value="Wildcard">Wildcard</option>
-                <option value="Quarterfinals">Quarterfinals</option>
-                <option value="Semifinals">Semifinals</option>
-                <option value="Superbowl">Superbowl</option>
+                <option value="Wild Card">Wild Card</option>
+                <option value="Divisional Playoffs">Divisional Playoffs</option>
+                <option value="Conference Championship">Conference Championship</option>
+                <option value="Super Bowl">Super Bowl</option>
             </select>
                 <button type="submit" id="addWeek" class="btn btn-success mt-2">Add Week</button>
             </div>
