Added sneak peek for outside users to view the site as the user bdunc

--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -39,6 +39,9 @@
             <div class="mt-3">
                 <a href="/account/create/" style="color:white;">Create Account</a>
             </div>
+            <div class="mt-3">
+                <a href="/home/sneakpeek/" style="color:white;">See site example</a>
+            </div>
             <p class="mt-4 text-muted">&copy; 2020-2021</p>
         </form>
     </body>
