--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-sm btn-green" data-dismiss="modal">Cancel</button>
-                    <a href="/account/delete/" class="btn btn-sm btn-danger" id="deleteButton">Delete</a>
+                    <!--<a href="#" class="btn btn-sm btn-danger" id="deleteButton">Delete</a>-->
                 </div>
             </div>
         </div>
